ipwhitelist.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipwhitelist
spec:
  ipWhiteList:
    sourceRange:
      - 81.64.168.221
