tls-redirect.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: default

spec:
  redirectScheme:
    scheme: https
    permanent: true
