service-vote.yml
apiVersion: v1
kind: Service
metadata:
  name: loadvoteapp 
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: voteapplb
